--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>Hello-World</title>
-</head>
-<body>
-	<h1>Hello World</h1>
-	<p>I'm hosting with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello-World</title>
+  </head>
+  <body>
+    <h1>Alex Wang</h1>
+    <h1>Gallery</h1>
+    <h1>Blog</h1>
+    <h1></h1>
+    <p>I'm hosting with Github Pages.</p>
+  </body>
 </html>
